--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     "activeTab",
     "https://*/*"
   ],
-  "page_action": {
+  "browser_action": {
     "default_popup": "popup.html"
   },
   "background": {
