--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,10 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      // "matches": ["<all_urls>"],
+      "matches": [
+        "*://*.medium.com/*"
+    ],
       "js": ["content.js"],
       "css": ["content.css"]
     }
