--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "manifest_version": 2,
 
-  "name": "Medium Ready",
+  "name": "ReadingSpeedster",
   "description": "read faster with well summarized catalog",
   "version": "0.1.0",
   "icons": {
-    "128": "icon.png" 
+    "128": "RS128.png" 
   },
   "permissions": [
     "declarativeContent",
